--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+board_build.filesystem = littlefs
+monitor_speed = 115200
 lib_deps = 
 	mathieucarbou/ESPAsyncWebServer@^3.3.22
 	tzapu/WiFiManager@^2.0.17
